# SDL_PangoDraw

./: .cvsignore  .gitattributes  .gitignore  .project  ChangeLog  INSTALL  Makefile.am  Makefile.in  README  README.md  SDL_Pango.pc.in  SDL_PangoDraw.pc.in  aclocal.m4  configure  configure.ac  configure.in
VisualC2003/: .cvsignore  SDL_Pango.rc  SDL_Pango.sln  SDL_Pango.vcproj
VisualC2003/SDL_Pango/: SDL_Pango.vcproj
VisualC2003/Setup/: Setup.sln  Setup.vdproj
VisualC2003/basicmodule/: basicmodule.vcproj  install.bat  postprocess.bat
VisualC2003/pjx/: pjx.vcproj  preprocess.bat
VisualC2003/testbench/: .cvsignore  testbench.vcproj
VisualC2003/xDemoNieves/: xDemoNieves.vcproj
VisualC2003/xDemoVapors/: xDemoVapors.vcproj
Wix/: .cvsignore  Makefile  Makefile.in  README  dev.xml  developer.xml  license.rtf  merge_module.wxs  merge_module.xml  merge_module.xml.in  testbench.xml  testbench.xml.in  ui.xml
basicmodule/: basic-fc.c  basic-fc.def  jisx4051-shaper.c  jisx4051-shaper.h
demo/: Animation.hpp  Application.hpp  Arcball.hpp  Config.hpp  Context.hpp  Error.hpp  Event.hpp  GLsdk.c  Import.hpp  Model.hpp  Nieves.cpp  SDL_Pango.hpp  Screen.hpp  Surface_Format.hpp  Text.hpp  Texture.hpp  Utility.hpp  Vapors.cpp  link_vc.hpp
demo/data/: Demo_Quad.ini  long_color.txt  long_mono.txt  usage_en.txt  usage_ja.txt
demo/msc/: demogeot.sln
demo/msc/Demo_Quad/: Demo_Quad.vcproj
demo/src/: Demo_Quad.cpp
demo_data/: Nieves.ini  Vapors.ini  target.txt
demo_data/aozora/: 0  1  2  3  4  5  6  7
demo_data/model/: background.mqo  background.mtl  book.mqo  book0000.mqo  book0001.mqo  book0002.mqo  book0003.mqo  book0004.mqo  book0005.mqo  book0006.mqo  book0007.mqo  book0008.mqo  book0009.mqo  book0010.mqo  page0005.mtl  page0010.mtl
docs/: Doxyfile  Doxyfile.in  Makefile.am  doxygen.am
docs/html/: _s_d_l___pango_8c.html  _s_d_l___pango_8h-source.html  _s_d_l___pango_8h.html  annotated.html  dir_000000.html  files.html  globals.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  globals_vars.html  index.html  struct___s_d_l_pango___matrix-members.html  struct___s_d_l_pango___matrix.html
pjx/: .cvsignore  Makefile.am  pjx-attributes.c  pjx-attributes.h  pjx-layout.c  pjx-layout.h  pjx-markup-private.h  pjx-markup.c  pjx.def  pjx.h
src/: .cvsignore  Makefile.am  Makefile.in  SDL_Pango.c  SDL_Pango.h  SDL_Pango.rc  SDL_PangoDraw.c  SDL_PangoDraw.h
test/: Makefile.am  Makefile.in  aclocal.m4  configure  markup.txt  testbench.c  testbench.rc
