SUBDIRS = src
DIST_SUBDIRS = docs VisualC2003

EXTRA_DIST = \
    SDL_Pango.pc.in sidebyside_patch \
	test/AUTHORS test/ChangeLog test/configure.in test/COPYING \
	test/INSTALL test/Makefile.am test/markup.txt test/NEWS \
	test/README test/testbench.c \
	Wix

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = SDL_Pango.pc
